# entrance_tests

./: .gitignore
BIOCAD/: CMakeLists.txt  Makefile  kernel.cl  main.cpp  sources.h
Bitcoinbot/: README.md  main.py  wallets.csv
Bitcoinbot/result/: wallet1.csv  wallet10.csv  wallet2.csv  wallet3.csv  wallet4.csv  wallet5.csv  wallet6.csv  wallet7.csv  wallet8.csv  wallet9.csv
CrazyPanda/: CMakeLists.txt  README.md
CrazyPanda/src/: BaseInventoryElement.cpp  BaseInventoryElement.h  Buff.cpp  Buff.h  BuffFilter.cpp  BuffFilter.h  CMakeLists.txt  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Utility.h
CrazyPanda/src/configs/: default_buff.json  default_item.json
CrazyPanda/tests/: CMakeLists.txt  InventoryTests.cpp
DominiGames/: AI.cpp  AI.h  CMakeLists.txt  Font.cpp  Font.h  GameLogic.cpp  GameLogic.h  GameWindow.cpp  GameWindow.h  LeeAlgorithm.cpp  LeeAlgorithm.h  Menu.cpp  Menu.h  Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  README.md  Shader.cpp  Shader.h  Tile.cpp  Tile.h  main.cpp
DominiGames/SOIL2/lib/: libsoil2.dylib
DominiGames/freetype/2.10.4/: INSTALL_RECEIPT.json
DominiGames/freetype/2.10.4/.brew/: freetype.rb
DominiGames/freetype/2.10.4/lib/: libfreetype.6.dylib
DominiGames/freetype/2.10.4/lib/pkgconfig/: freetype2.pc
Dr.Web/junior/: main.cpp
Dr.Web/middle/: main.cpp
ElveesNeotek/: CMakeLists.txt  README.md  build.sh  executor.cpp  executor.h  main.cpp  parser.cpp  parser.h
ElveesNeotek/input_dir/: 1.txt  2.txt  3.txt
Elverils/: README.md
Elverils/cpu_consumption/: base.cpp  base.h  constants.h  container.h  cpu_consumption.sln  main.cpp  processor.cpp  processor.h  worker.cpp
Elverils/cpu_consumption_mac_os/CPU_consumption/: base.cpp  base.h  constants.h  container.h  core.vs  main.cpp  processor.cpp  processor.h  shader.cpp  shader.h  worker.cpp  worker.h
Elverils/cpu_consumption_mac_os/CPU_consumption.xcodeproj/: project.pbxproj
Elverils/cpu_consumption_mac_os/CPU_consumption.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Elverils/cpu_consumption_mac_os/CPU_consumption.xcodeproj/project.xcworkspace/xcuserdata/kalkolay.xcuserdatad/: UserInterfaceState.xcuserstate
Elverils/cpu_consumption_mac_os/CPU_consumption.xcodeproj/xcuserdata/kalkolay.xcuserdatad/xcschemes/: xcschememanagement.plist
MyTona_task/: README.md  nodraw.cpp  nodraw.ilk
SPL_Assignment/: CMakeLists.txt
SPL_Assignment/src/Task1/: main.cpp
SPL_Assignment/src/Task2/: ReverseAfter.h  main.cpp
SPL_Assignment/src/Task3/: main.cpp
SPL_Assignment/src/Task4/: main.cpp
SPL_Assignment/src/Task5/: List.cpp  List.h  main.cpp
Saber_Test_Solutions/: Saber_Test_4_Programmers_s.doc
Saber_Test_Solutions/1/: CMakeLists.txt  main.cpp
Saber_Test_Solutions/2/: CMakeLists.txt  main.cpp
Saber_Test_Solutions/3/: CMakeLists.txt  main.cpp
Saber_Test_Solutions/3_remastered/: CMakeLists.txt  main.cpp
cpu_consumption/: cpu_consumption.vcxproj  worker.h
incoel/: main.py
incoel/test_task/: README.docx
incoel/test_task/dst/: img_0001_16-05-2019.xml  img_0003_16-05-2019.xml  img_0004_16-05-2019.xml  img_0005_16-05-2019.xml
incoel/test_task/gts/: img_0001_16-05-2019.xml  img_0002_16-05-2019.xml  img_0003_16-05-2019.xml  img_0004_16-05-2019.xml  img_0005_16-05-2019.xml
protey_task/: BaseSocket.hpp  CMakeCache.txt  CMakeLists.txt  CommonTypes.hpp  IExecutionStrategy.hpp  ISocket.hpp  Makefile  README.md  SocketTCP.cpp  SocketTCP.hpp  SocketUDP.cpp  SocketUDP.hpp  cmake_install.cmake
protey_task/client/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  main.cpp
protey_task/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  server
think-cell/: README.md  interval_map.cpp
